--- a/ui/src/app/connect/schema-editor/event-property-primitive/event-property-primitive.component.html
+++ b/ui/src/app/connect/schema-editor/event-property-primitive/event-property-primitive.component.html
@@ -19,7 +19,7 @@
 <div class="divBorder">
     <mat-form-field class="doubleWidth">
         <mat-select placeholder="Runtime Type" [(ngModel)]="property.runtimeType"
-            [disabled]="property.isTimestampProperty()">
+            [disabled]="isTimestampProperty">
             <mat-option *ngFor="let dataType of runtimeDataTypes" [value]="dataType.url">
                 {{ dataType.label }}
             </mat-option>
@@ -42,7 +42,7 @@
     <!--</form>-->
 
 
-    <div fxLayout="row" fxLayoutAlign="start" *ngIf="!property.isTimestampProperty()">
+    <div fxLayout="row" fxLayoutAlign="start" *ngIf="!isTimestampProperty">
         <div class="form-group" fxFlexAlign="center" style="width: 155px">
             <mat-form-field *ngIf="!hadMeasarumentUnit" class="example-full-width" style="width: 155px">
                 <input matInput placeholder="Unit" [matAutocomplete]="auto" [formControl]="stateCtrl"
@@ -73,7 +73,7 @@
         </mat-form-field>
     </div>
 
-    <div fxLayout="row" fxLayoutAlign="start" *ngIf="property.isTimestampProperty()">
+    <div fxLayout="row" fxLayoutAlign="start" *ngIf="isTimestampProperty">
         <div class="form-group" fxFlexAlign="center">
             <mat-form-field [class.example-full-width]="property.timestampTransformationMode !== undefined "
                 style="margin-right: 10px" [class.doubleWidth]="property.timestampTransformationMode === undefined"
