--- a/ui/src/app/connect/static-properties/static-free-input/static-free-input.component.scss
+++ b/ui/src/app/connect/static-properties/static-free-input/static-free-input.component.scss
@@ -16,6 +16,8 @@
  *
  */
 
+@import '../../../../scss/sp/colors';
+
 #formWrapper {
     height: 60px;
 }
@@ -27,5 +29,9 @@ p {
 }
 form {
     float: left;
+}
+
+::ng-deep.mat-accent ::ng-deep.mat-slider-track-fill, .mat-accent ::ng-deep.mat-slider-thumb, .mat-accent ::ng-deep.mat-slider-thumb-label {
+    background-color: $sp-color-accent;
 }
 
