--- a/ui/src/app/connect/static-properties/static-property.component.html
+++ b/ui/src/app/connect/static-properties/static-property.component.html
@@ -17,76 +17,83 @@
   -->
 
 <div fxFlex="100" fxLayout="column">
-    <div fxFlex="100">{{staticProperty.label}}</div>
+    <div fxFlex="100" fxLayout="row" class="static-property-panel">
+        <div fxFlex="40" fxLayout="column">
+            <b>{{staticProperty.label}}</b>
+            <mat-hint class="description">{{staticProperty.description}}</mat-hint>
+        </div>
+        <div fxFlex="60">
+            <app-static-secret-input *ngIf="isSecretStaticProperty(staticProperty)"
+                                     [staticProperty]="staticProperty"
+                                     [parentForm]="parentForm"
+                                     (updateEmitter)="emitUpdate($event)">
+            </app-static-secret-input>
 
-    <app-static-secret-input *ngIf="isSecretStaticProperty(staticProperty)"
-                             [staticProperty]="staticProperty"
-                             [parentForm]="parentForm"
-                             (updateEmitter)="emitUpdate($event)">
-    </app-static-secret-input>
+            <app-static-free-input *ngIf="isFreeTextStaticProperty(staticProperty)"
+                                   [staticProperty]="staticProperty"
+                                   [parentForm]="parentForm"
+                                   (updateEmitter)="emitUpdate($event)">
+            </app-static-free-input>
 
-    <app-static-free-input *ngIf="isFreeTextStaticProperty(staticProperty)"
-                           [staticProperty]="staticProperty"
-                           [parentForm]="parentForm"
-                           (updateEmitter)="emitUpdate($event)">
-    </app-static-free-input>
+            <app-static-file-input *ngIf="isFileStaticProperty(staticProperty)"
+                                   (inputEmitter)="valueChange($event)" [staticProperty]="staticProperty"
+                                   [adapterId]="adapterId">
+            </app-static-file-input>
 
-    <app-static-file-input *ngIf="isFileStaticProperty(staticProperty)"
-                           (inputEmitter)="valueChange($event)" [staticProperty]="staticProperty"
-                           [adapterId]="adapterId">
-    </app-static-file-input>
+            <app-static-color-picker *ngIf="isColorPickerStaticProperty(staticProperty)"
+                                     [staticProperty]="staticProperty"
+                                     [parentForm]="parentForm"
+                                     (updateEmitter)="emitUpdate($event)">
+            </app-static-color-picker>
 
-    <app-static-color-picker *ngIf="isColorPickerStaticProperty(staticProperty)"
-                             [staticProperty]="staticProperty"
-                             [parentForm]="parentForm"
-                             (updateEmitter)="emitUpdate($event)">
-    </app-static-color-picker>
+            <app-static-runtime-resolvable-any-input *ngIf="isRuntimeResolvableAnyStaticProperty(staticProperty)"
+                                                     (inputEmitter)="valueChange($event)"
+                                                     [staticProperty]="staticProperty"></app-static-runtime-resolvable-any-input>
 
-    <app-static-runtime-resolvable-any-input *ngIf="isRuntimeResolvableAnyStaticProperty(staticProperty)"
-                                             (inputEmitter)="valueChange($event)"
-                                             [staticProperty]="staticProperty"></app-static-runtime-resolvable-any-input>
+            <app-static-runtime-resolvable-oneof-input *ngIf="isRuntimeResolvableOneOfStaticProperty(staticProperty)"
+                                                       (inputEmitter)="valueChange($event)"
+                                                       [completedStaticProperty]="completedStaticProperty"
+                                                       [staticProperty]="staticProperty"
+                                                       [staticProperties]="staticProperties"
+                                                       [adapterId]="adapterId"></app-static-runtime-resolvable-oneof-input>
 
-    <app-static-runtime-resolvable-oneof-input *ngIf="isRuntimeResolvableOneOfStaticProperty(staticProperty)"
-                                               (inputEmitter)="valueChange($event)"
-                                               [completedStaticProperty]="completedStaticProperty"
-                                               [staticProperty]="staticProperty" [staticProperties]="staticProperties"
-                                               [adapterId]="adapterId"></app-static-runtime-resolvable-oneof-input>
+            <app-static-any-input
+                    *ngIf="isAnyStaticProperty(staticProperty) && !isRuntimeResolvableAnyStaticProperty(staticProperty)"
+                    (inputEmitter)="valueChange($event)" [staticProperty]="staticProperty"></app-static-any-input>
 
-    <app-static-any-input
-            *ngIf="isAnyStaticProperty(staticProperty) && !isRuntimeResolvableAnyStaticProperty(staticProperty)"
-            (inputEmitter)="valueChange($event)" [staticProperty]="staticProperty"></app-static-any-input>
+            <app-static-one-of-input
+                    *ngIf="isOneOfStaticProperty(staticProperty) && !isRuntimeResolvableOneOfStaticProperty(staticProperty)"
+                    (inputEmitter)="valueChange($event)" [staticProperty]="staticProperty">
+            </app-static-one-of-input>
 
-    <app-static-one-of-input
-            *ngIf="isOneOfStaticProperty(staticProperty) && !isRuntimeResolvableOneOfStaticProperty(staticProperty)"
-            (inputEmitter)="valueChange($event)" [staticProperty]="staticProperty">
-    </app-static-one-of-input>
+            <app-static-mapping-unary *ngIf="isMappingPropertyUnary(staticProperty)"
+                                      [eventSchemas]="eventSchemas" (inputEmitter)="valueChange($event)"
+                                      [staticProperty]="staticProperty" [parentForm]="parentForm">
+            </app-static-mapping-unary>
 
-    <app-static-mapping-unary *ngIf="isMappingPropertyUnary(staticProperty)"
-                              [eventSchemas]="eventSchemas" (inputEmitter)="valueChange($event)"
-                              [staticProperty]="staticProperty" [parentForm]="parentForm">
-    </app-static-mapping-unary>
+            <app-static-mapping-nary *ngIf="isMappingNaryProperty(staticProperty)" [eventSchemas]="eventSchemas"
+                                     (inputEmitter)="valueChange($event)" [staticProperty]="staticProperty">
+            </app-static-mapping-nary>
 
-    <app-static-mapping-nary *ngIf="isMappingNaryProperty(staticProperty)" [eventSchemas]="eventSchemas"
-                             (inputEmitter)="valueChange($event)" [staticProperty]="staticProperty">
-    </app-static-mapping-nary>
+            <app-static-alternatives *ngIf="isAlternativesStaticProperty(staticProperty)"
+                                     [adapterId]="adapterId" [eventSchemas]="eventSchemas"
+                                     [staticProperty]="staticProperty" class="test fullWidth"
+                                     (inputEmitter)="valueChange($event)">
+            </app-static-alternatives>
 
-    <app-static-alternatives *ngIf="isAlternativesStaticProperty(staticProperty)"
-                             [adapterId]="adapterId" [eventSchemas]="eventSchemas"
-                             [staticProperty]="staticProperty" class="test fullWidth"
-                             (inputEmitter)="valueChange($event)">
-    </app-static-alternatives>
+            <app-static-group *ngIf="isGroupStaticProperty(staticProperty)"
+                              [adapterId]="adapterId" [eventSchemas]="eventSchemas"
+                              [staticProperty]="staticProperty" class="test fullWidth"
+                              (inputEmitter)="valueChange($event)">
+            </app-static-group>
 
-    <app-static-group *ngIf="isGroupStaticProperty(staticProperty)"
-                      [adapterId]="adapterId" [eventSchemas]="eventSchemas"
-                      [staticProperty]="staticProperty" class="test fullWidth"
-                      (inputEmitter)="valueChange($event)">
-    </app-static-group>
-
-    <app-static-collection *ngIf="isCollectionStaticProperty(staticProperty)"
-                           [adapterId]="adapterId" [eventSchemas]="eventSchemas"
-                           [staticProperty]="staticProperty" class="test fullWidth"
-                           (inputEmitter)="valueChange($event)" (updateEmitter)="emitUpdate($event)">
-    </app-static-collection>
+            <app-static-collection *ngIf="isCollectionStaticProperty(staticProperty)"
+                                   [adapterId]="adapterId" [eventSchemas]="eventSchemas"
+                                   [staticProperty]="staticProperty" class="test fullWidth"
+                                   (inputEmitter)="valueChange($event)" (updateEmitter)="emitUpdate($event)">
+            </app-static-collection>
+        </div>
+    </div>
+    <mat-divider></mat-divider>
 </div>
-<mat-divider></mat-divider>
 
