--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -22,7 +22,6 @@
 @import '~angular-material/angular-material.scss';
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 @import '~bootstrap/dist/css/bootstrap.css';
-@import '~trix/dist/trix.css';
 @import '~slick-carousel/slick/slick-theme.css';
 @import '~slick-carousel/slick/slick.css';
 @import '~datatables.net-dt/css/jquery.dataTables.css';
@@ -38,6 +37,7 @@
 @import "~ng-pick-datetime/assets/style/picker.min.css";
 @import '~leaflet/dist/leaflet.css';
 @import '~material-design-icons/iconfont/material-icons.css';
+@import '~quill/dist/quill.snow.css';
 
 @import '~roboto-fontface/css/roboto/roboto-fontface.css';
 
