--- a/ui/src/scss/sp/buttons.scss
+++ b/ui/src/scss/sp/buttons.scss
@@ -80,6 +80,7 @@
     padding: 0.25em 0.75em;
     font-size: 0.8em;
     max-height: 20px;
+    line-height: 10px;
 }
 
 .mat-raised-button.mat-primary:hover:enabled {
