--- a/ui/src/app/connect/dialog/edit-timestamp-property/edit-timestamp-property.component.html
+++ b/ui/src/app/connect/dialog/edit-timestamp-property/edit-timestamp-property.component.html
@@ -16,27 +16,25 @@
   ~
   -->
 
-<div fxLayout="row" fxLayoutAlign="start" *ngIf="isTimestampProperty">
+<div fxLayout="row" fxLayoutAlign="start">
+     <mat-form-field class="doubleWidth">
+        <mat-select placeholder="Timestamp converter (unix timestamp)"
+                    [(value)]="cachedProperty.timestampTransformationMode">
+            <mat-option value="none">None</mat-option>
+            <mat-option value="formatString">Date String</mat-option>
+            <mat-option value="timeUnit">Date Number</mat-option>
+        </mat-select>
+    </mat-form-field>
+</div>
+
+
+<div fxLayout="row" fxLayoutAlign="start">
     <div class="form-group" fxFlexAlign="center">
-        <mat-form-field [class.example-full-width]="cachedProperty.timestampTransformationMode !== undefined "
-                        style="margin-right: 10px" [class.doubleWidth]="cachedProperty.timestampTransformationMode === undefined"
-                        [class.aThirdWidth]="selectedTimeMultiplier === 'custom' && cachedProperty.timestampTransformationMode === 'timeUnit'">
-            <mat-select placeholder="Timestamp converter (unix timestamp)"
-                        [(value)]="cachedProperty.timestampTransformationMode">
-                <mat-option>None</mat-option>
-                <mat-option value="formatString">Date String</mat-option>
-                <mat-option value="timeUnit">Date Number</mat-option>
-            </mat-select>
-        </mat-form-field>
-    </div>
-    <div class="form-group" fxFlexAlign="center">
-        <mat-form-field *ngIf="cachedProperty.timestampTransformationMode === 'formatString'">
+        <mat-form-field class="doubleWidth" *ngIf="cachedProperty.timestampTransformationMode === 'formatString'">
             <input matInput placeholder="E.g. yyyy-MM-dd HH:mm:ss.SSSZ"
                    [(ngModel)]="cachedProperty.timestampTransformationFormatString">
         </mat-form-field>
-        <mat-form-field *ngIf="cachedProperty.timestampTransformationMode === 'timeUnit'"
-                        [class.example-full-width]="selectedTimeMultiplier !== 'custom'"
-                        [class.aThirdWidth]="selectedTimeMultiplier === 'custom'">
+        <mat-form-field class="doubleWidth" *ngIf="cachedProperty.timestampTransformationMode === 'timeUnit'">
             <mat-select placeholder="Current time unit" [(value)]="selectedTimeMultiplier">
                 <mat-option value="milliseconds" (click)="cachedProperty.timestampTransformationMultiplier = 0">
                     Milliseconds</mat-option>
