[STREAMPIPES-145] Add edit data type component

--- a/ui/src/app/connect/dialog/edit-data-type/edit-data-type.component.css
+++ b/ui/src/app/connect/dialog/edit-data-type/edit-data-type.component.css
@@ -15,18 +15,6 @@
  * limitations under the License.
  *
  */
-
-import { Component, Input } from '@angular/core';
-
-@Component({
-  selector: 'sp-edit-event-property-list',
-  templateUrl: './edit-event-property-list.component.html',
-  styleUrls: ['./edit-event-property-list.component.css']
-})
-export class EditEventPropertyListComponent {
-
-  constructor() { }
-
-  @Input() cachedProperty: any;
-
+.doubleWidth {
+    width: 370px !important;
 }
