--- a/ui/src/app/connect/dialog/edit-event-property-list/edit-event-property-list.component.html
+++ b/ui/src/app/connect/dialog/edit-event-property-list/edit-event-property-list.component.html
@@ -16,12 +16,6 @@
   ~
   -->
 
-<div class="body">
-    <mat-form-field class="doubleWidth">
-        <mat-select placeholder="Runtime Type" [(ngModel)]="property.eventProperty.runtimeType">
-            <mat-option *ngFor="let dataType of runtimeDataTypes" [value]="dataType.url">
-                {{ dataType.label }}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
-</div>
+<sp-edit-data-type
+        [cachedProperty]= "cachedProperty.eventProperty">
+</sp-edit-data-type>
