[STREAMPIPES-145] Rename unit transformation component

--- a/ui/src/app/connect/dialog/edit-event-property/components/edit-event-property-primitive/edit-event-property-primitive.component.html
+++ b/ui/src/app/connect/dialog/edit-event-property/components/edit-event-property-primitive/edit-event-property-primitive.component.html
@@ -28,10 +28,10 @@
             [cachedProperty]= "cachedProperty">
     </sp-edit-data-type>
 
-    <sp-unit-transformation
+    <sp-edit-unit-transformation
             [cachedProperty]= "cachedProperty"
             [showUnitTransformation]="!isTimestampProperty">
-    </sp-unit-transformation>
+    </sp-edit-unit-transformation>
 
     <mat-form-field *ngIf="staticValueAddedByUser()" class="doubleWidth">
         <input matInput placeholder="Static Value" name="static_value" id="static_value"
