Add selection of non-numeric properties (string columns) to linechart widget

--- a/ui/src/app/data-explorer/components/widgets/line-chart/line-chart-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/line-chart/line-chart-widget.component.html
@@ -21,10 +21,21 @@
 
         <div fxFlex="100" layout="row" fxLayoutAlign="end center" style="margin-left: 0px;margin-right: 0px;">
             <sp-select-properties
+                    label="Select Columns"
+                    multiple = true
                     style="margin-right: 10px;"
                     (changeSelectedProperties)="setSelectedColumn($event)"
                     [availableProperties]="availableColumns"
                     [selectedProperties]="selectedColumns">
+            </sp-select-properties>
+
+            <sp-select-properties
+                    label="Select Label Column"
+                    multiple = false
+                    style="margin-right: 10px;"
+                    (changeSelectedProperties)="setSelectedLabelColumn($event)"
+                    [availableProperties]="availableNonNumericColumns"
+                    [selectedProperties]="selectedNonNumericColumn">
             </sp-select-properties>
 
 
