[STREAMPIPES-145] Fix edit event property list

--- a/ui/src/app/connect/dialog/edit-event-property/edit-event-property.component.html
+++ b/ui/src/app/connect/dialog/edit-event-property/edit-event-property.component.html
@@ -61,7 +61,7 @@
   </sp-edit-event-property-primitive>
   <sp-edit-event-property-list
           *ngIf="isEventPropertyList"
-          [property]="cachedProperty">
+          [cachedProperty]="cachedProperty">
   </sp-edit-event-property-list>
 
 </mat-dialog-content>
