--- a/ui/src/app/editor-v2/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.html
+++ b/ui/src/app/editor-v2/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.html
@@ -49,7 +49,7 @@
     </div>
 </div>
 <div flex id="editor-icon-stand" class="icon-stand" *ngIf="currentlyFilteredElements">
-    <span id="{{ element.appId }}" (mouseenter)="updateMouseOver(element.name)"
+    <span matTooltip="{{element.name}}" [matTooltipPosition]="'above'" [matTooltipClass]="tooltip" id="{{ element.appId }}" (mouseenter)="updateMouseOver(element.name)"
           (mouseleave)="updateMouseOver('')"
           *ngFor="let element of currentlyFilteredElements"
           class="draggable-icon tt"
