--- a/ui/src/app/editor-v2/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.scss
+++ b/ui/src/app/editor-v2/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.scss
@@ -23,3 +23,8 @@
     display: flex;
     align-items: center;
 }
+
+::ng-deep.mat-tooltip.tooltip {
+    background-color: darkblue;
+    font-size: 12px;
+}
